2010-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Application.cs: Cast InitParams to Dictionary<>
	* StartupEventArgs.cs: Move InitParams initialization to
	SilverlightHost

2010-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Application.cs:
	* CornerRadius.cs:
	* DependencyPropertyChangedEventArgs.cs:
	* Rect.cs:
	* Size.cs:
		Fix error CS0843 with newer compilers - just like CSC 
		would not compile it previously

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* Deployment.cs:
	* Application.cs:
	* DependencyProperty.cs:
	* ResourceDictionary.cs:
	* PresentationFrameworkCollection.cs: Make our managed Value
	  struct implement IDisposable and make that call
	  value_free_value. Change all places which use
	  Value.FromObject to wrap the returned Value in a using
	  statement. This should help find all the places where we use
	  value_free_value incorrectly.

2010-05-13  Jeffrey Stedfast  <fejj@novell.com>

	* Deployment.cs (InitializeDeployment): Only call ExtractXap() if
	the xapPath isn't a directory (if it's a directory, then it is
	already extracted).

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs: remove InitializePluginHost and roll its 2 lines
	into InitializeDeployment.  also initialize the appdomain's
	"xap_uri" setting in the non-plugin case.

2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* UIElement.cs: Move TemplateOwner to DependencyObject

	* Expression.cs:
	* FrameworkElement.cs:
	* DependencyObject.cs:
	* TemplateBindingExpression.cs: Move the Expression handling
	  code from FrameworkElement to DependencyObject so that we
	  can support the new SL4 databinding capabilities.

2010-05-03  Sebastien Pouliot  <sebastien@ximian.com>

	* MessageBox.cs: Throw UnauthorizedAccessException is called
	from outside the main UI thread.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.g.cs: Stub out the missing 'Section' class.

2010-04-26  Alan McGovern  <amcgovern@novell.com>
