@@ -1,3 +1,10 @@
+2010-05-24  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows/DependencyPropertyTest.cs: DPs which are of
+	  Type::OBJECT do not perform a value equality check when
+	  deciding if they should raise the property changed event or
+	  not.
+
 2010-05-21  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* System.ComponentModel/AsyncOperationTest.cs: New. Some test 
